# SimpleCL

./: CMakeLists.txt  Makefile  SimpleCL.cpp  SimpleCL.h  SimpleCL.hpp  add_demo.cl  add_demo.cpp  host.cl  host.cpp  print_opencl_arguments.sh  speed_test.cl  speed_test.cpp  sum_demo.cl  sum_demo.cpp  sum_demo_mapped.cpp
